--- a/workflow-templates/gcx-android-pull-request.yml
+++ b/workflow-templates/gcx-android-pull-request.yml
@@ -2,10 +2,10 @@ name: Pull Request
 
 on:
   push:
-    branches: [ develop, $default-branch ]
+    branches: [ $default-branch ]
   pull_request:
     types: [opened, reopened, ready_for_review, synchronize]
-    branches: [ develop, $default-branch ]
+    branches: [ $default-branch ]
 
 jobs:
   cancelPreviousRuns:
