--- a/workflow-templates/gcx-android-release.yml
+++ b/workflow-templates/gcx-android-release.yml
@@ -1,24 +1,16 @@
-name: Publish Artifact
+name: Build Release
 
 on:
   release:
     types: [released]
 
 jobs:
-  publish:
-    name: Publish Artifact
+  build_release:
+    name: Build Release
     runs-on: ubuntu-latest
     steps:
-      - name: Cancel previous runs
-        uses: styfle/cancel-workflow-action@0.6.0
-        with:
-          access_token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Checkout project files
+      - name: Checkout code
         uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
       - name: Cache gradle wrapper and packages
         uses: actions/cache@v2
         with:
@@ -28,14 +20,15 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
           restore-keys: |
             ${{ runner.os }}-gradle
-      - name: Build release
+      - name: Build Release
         run: ./gradlew assembleRelease
-        timeout-minutes: 10
         env:
           GITHUB_PAT: ${{ secrets.PACKAGES_READ_TOKEN }}
           KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
           ALIAS_PASSWORD: ${{ secrets.ALIAS_PASSWORD }}
-      - name: Publish package
-        run: ./gradlew publish
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        timeout-minutes: 10
+      - name: Upload build outputs
+        uses: actions/upload-artifact@v2
+        with:
+          name: release-outputs
+          path: 'app/build/outputs/'
