--- a/workflow-templates/gcx-android-release.yml
+++ b/workflow-templates/gcx-android-release.yml
@@ -11,6 +11,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
       - name: Cache gradle wrapper and packages
         uses: actions/cache@v2
         with:
