upload release artifact

--- a/workflow-templates/android/gcx-android-release.yml
+++ b/workflow-templates/android/gcx-android-release.yml
@@ -35,8 +35,17 @@ jobs:
           KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
           ALIAS_PASSWORD: ${{ secrets.ALIAS_PASSWORD }}
         timeout-minutes: 10
-      - name: Upload build outputs
-        uses: actions/upload-artifact@v2
+      - name: Get release
+        id: get_release
+        uses: bruceadams/get-release@v1.2.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload release binary
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          name: release-outputs
-          path: 'app/build/outputs/'
+          upload_url: ${{ steps.get_release.outputs.upload_url }}
+          asset_path: app/build/outputs/apk/release/app-release.apk
+          asset_name: APK
+          asset_content_type: application/octet-stream
