--- a/workflow-templates/android/gcx-android-release.yml
+++ b/workflow-templates/android/gcx-android-release.yml
@@ -49,5 +49,5 @@ jobs:
         with:
           upload_url: ${{ steps.get_release.outputs.upload_url }}
           asset_path: app/build/outputs/apk/release/app-release.apk
-          asset_name: APK
+          asset_name: app-release.apk
           asset_content_type: application/octet-stream
