--- a/workflow-templates/android/gcx-android-pull-request.yml
+++ b/workflow-templates/android/gcx-android-pull-request.yml
@@ -82,6 +82,7 @@ jobs:
         uses: mikepenz/action-junit-report@v2.2.0
         with:
           report_paths: '**/build/test-results/**/TEST-*.xml'
+          token: ${{ secrets.GITHUB_TOKEN }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
       - name: Annotate PR with Lint Report
         uses: yutailang0119/action-android-lint@v1.0.2
