--- a/workflow-templates/android/gcx-android-pull-request.yml
+++ b/workflow-templates/android/gcx-android-pull-request.yml
@@ -32,8 +32,9 @@ jobs:
       - name: Checkout project files
         uses: actions/checkout@v2
       - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
+          distribution: 'adopt'
           java-version: 1.8
       - name: Cache gradle wrapper and packages
         uses: actions/cache@v2
@@ -56,8 +57,9 @@ jobs:
       - name: Checkout project files
         uses: actions/checkout@v2
       - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
+          distribution: 'adopt'
           java-version: 1.8
       - name: Cache gradle wrapper and packages
         uses: actions/cache@v2
