--- a/workflow-templates/android/gcx-android-release.yml
+++ b/workflow-templates/android/gcx-android-release.yml
@@ -18,8 +18,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
+          distribution: 'adopt'
           java-version: 1.8
       - name: Cache gradle wrapper and packages
         uses: actions/cache@v2
