--- a/workflow-templates/android/gcx-android-publish.yml
+++ b/workflow-templates/android/gcx-android-publish.yml
@@ -13,15 +13,15 @@ on:
   release:
     types: [released]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   publish:
     name: Publish Artifact
     runs-on: ubuntu-latest
     steps:
-      - name: Cancel previous runs
-        uses: styfle/cancel-workflow-action@0.6.0
-        with:
-          access_token: ${{ secrets.GITHUB_TOKEN }}
       - name: Checkout project files
         uses: actions/checkout@v2
       - name: Set up JDK 8
