--- a/workflow-templates/android/gcx-android-pull-request.yml
+++ b/workflow-templates/android/gcx-android-pull-request.yml
@@ -13,17 +13,11 @@ on:
   pull_request:
     types: [opened, reopened, ready_for_review, synchronize]
 
-jobs:
-  cancelPreviousRuns:
-    name: Cancel previous runs
-    if: github.event_name == 'push' || !github.event.pull_request.draft
-    runs-on: ubuntu-latest
-    steps:
-      - name: Cancel previous runs
-        uses: styfle/cancel-workflow-action@0.6.0
-        with:
-          access_token: ${{ secrets.GITHUB_TOKEN }}
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
+jobs:
   build:
     name: Build all variants
     if: github.event_name == 'push' || !github.event.pull_request.draft
