--- a/workflow-templates/android/gcx-android-release-tag.yml
+++ b/workflow-templates/android/gcx-android-release-tag.yml
@@ -12,6 +12,10 @@ on:
     tags:
       - 'release/v*'
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build_release:
     name: Build Release
