--- a/workflow-templates/flutter/gcx-flutter-pull-request.yml
+++ b/workflow-templates/flutter/gcx-flutter-pull-request.yml
@@ -16,17 +16,11 @@ on:
     paths-ignore:
       - 'README.md'
 
-jobs:
-  cancelPreviousRuns:
-    name: Cancel previous runs
-    if: github.event_name == 'push' || !github.event.pull_request.draft
-    runs-on: ubuntu-latest
-    steps:
-      - name: Cancel previous runs
-        uses: styfle/cancel-workflow-action@0.9.0
-        with:
-          access_token: ${{ secrets.GITHUB_TOKEN }}
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
+jobs:
   build_android:
     name: Build Android App
     if: github.event_name == 'push' || !github.event.pull_request.draft
