--- a/workflow-templates/flutter/gcx-flutter-release-tag.yml
+++ b/workflow-templates/flutter/gcx-flutter-release-tag.yml
@@ -13,6 +13,10 @@ on:
     tags:
       - 'release/v*'
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build_release_android:
     name: Build Release Android
