--- a/workflow-templates/misc/gcx-workflow-check.yml
+++ b/workflow-templates/misc/gcx-workflow-check.yml
@@ -16,6 +16,10 @@ on:
     paths:
       - '.github/workflows/**'
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   runAction:
     name: Test Workflows
