--- a/workflow-templates/gcx-flutter-release-tag.yml
+++ b/workflow-templates/gcx-flutter-release-tag.yml
@@ -48,7 +48,7 @@ jobs:
         id: version
         run: |
           pubspecVersion=$(cat pubspec.yaml | grep 'version\:\ ' | sed -e "s/^.*[[:blank:]]//" -e "s/^\"//" -e "s/\"$//")
-          echo "::set-output name=version-name::$pubspecVersion"
+          echo "version-name=$pubspecVersion" >> $GITHUB_OUTPUT
       - name: Build Release
         run: ./flutterw build apk --release --build-number=${{ github.run_number }} --build-name=${{ steps.version.outputs.version-name }}
         env:
