--- a/workflow-templates/gcx-android-release-tag.yml
+++ b/workflow-templates/gcx-android-release-tag.yml
@@ -28,15 +28,8 @@ jobs:
         with:
           distribution: 'adopt'
           java-version: 8
-      - name: Cache gradle wrapper and packages
-        uses: actions/cache@v3.0.11
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@16bf8bc8fe830fa669c3c9f914d3eb147c629707 # v4.0.1
       - name: Build Release
         run: ./gradlew assembleRelease
         env:
