--- a/workflow-templates/gcx-android-publish.yml
+++ b/workflow-templates/gcx-android-publish.yml
@@ -11,7 +11,7 @@ name: Publish Artifact
 
 on:
   release:
-    types: [released]
+    types: [ released ]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -23,9 +23,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout project files
-        uses: actions/checkout@v3.1.0
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
       - name: Set up JDK 8
-        uses: actions/setup-java@v3.6.0
+        uses: actions/setup-java@6a0805fcefea3d4657a47ac4c165951e33482018 # v4.2.2
         with:
           distribution: 'adopt'
           java-version: 8
