--- a/workflow-templates/gcx-android-release.yml
+++ b/workflow-templates/gcx-android-release.yml
@@ -8,7 +8,7 @@ name: Build Release
 
 on:
   release:
-    types: [released]
+    types: [ released ]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -20,9 +20,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3.1.0
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
       - name: Set up JDK 8
-        uses: actions/setup-java@v3.6.0
+        uses: actions/setup-java@6a0805fcefea3d4657a47ac4c165951e33482018 # v4.2.2
         with:
           distribution: 'adopt'
           java-version: 8
@@ -36,7 +36,7 @@ jobs:
         timeout-minutes: 10
       - name: Get release
         id: get_release
-        uses: bruceadams/get-release@v1.3.2
+        uses: bruceadams/get-release@74c3d60f5a28f358ccf241a00c9021ea16f0569f # v1.3.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload release binary
